--- a/AuctionAce.Api/Views/AuctionItem/Index.cshtml
+++ b/AuctionAce.Api/Views/AuctionItem/Index.cshtml
@@ -32,11 +32,11 @@
             })
             .catch(err => console.error("Error establishing connection: ", err.toString()));
 
-        connection.on("ReceiveMessage", function (message,userEmail) {
+        connection.on("ReceiveMessage", function (message,userEmail,date) {
             var messageElement = document.createElement("div");
             
             messageElement.className = "message";
-            messageElement.textContent = `${userEmail}: ${message}`;
+            messageElement.textContent = `${date}: ${userEmail}: ${message}`;
             document.getElementById("chatBox").appendChild(messageElement);
         });
 
