--- a/AuctionAce.Api/Views/AuctionItem/Index.cshtml
+++ b/AuctionAce.Api/Views/AuctionItem/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutLogged.cshtml";
     string userEmail = Context.Session.GetString("UserEmail");
-
+    string userId = Context.Session.GetString("UserId");
 }
 
 
@@ -69,67 +69,7 @@
         <input type="number" id="newBid" />
     </div>
 </div>
-
-
-
-
-
-<div class="container-fluid chat-container">
-    <div class="chat-box" id="chatBox">
-    </div>
-    <div class="chat-input p-3">
-        <input id="messageInput" type="text" class="form-control" placeholder="Type message..." />
-        <button id="sendButton" class="btn btn-primary ms-2">Send</button>
-    </div>
-</div>
-
-
-<script>
-    ///dodać tutaj start bid
-    let highestBid = 0;
-    const itemGuid = '@Model.Guid';
-    const userEmail = '@userEmail';
-    $(document).ready(function () {
-        const connection = new signalR.HubConnectionBuilder()
-            .withUrl("/chathub")
-            .build();
-
-
-
-        connection.start()
-            .then(() => {
-                connection.invoke("JoinGroup", itemGuid)
-                    .catch(err => console.error("Error joining group: ", err.toString()));
-            })
-            .catch(err => console.error("Error establishing connection: ", err.toString()));
-
-        connection.on("ReceiveMessage", function (message, userEmail, date) {
-            var messageElement = document.createElement("div");
-            messageElement.className = "message";
-            messageElement.textContent = `${date}: ${userEmail}: ${message}`;
-            document.getElementById("chatBox").appendChild(messageElement);
-        });
-
-        $('#sendButton').click(function () {
-            const message = $('#messageInput').val();
-            if (message) {
-                connection.invoke("SendMessageToGroup", itemGuid, message, userEmail)
-                    .catch(err => console.error("Error sending message: ", err.toString()));
-                $('#messageInput').val(''); // Wyczyść pole tekstowe po wysłaniu wiadomości
-            }
-        });
-
-        $('#quitButton').click(function () {
-
-            connection.invoke("LeaveGroup", itemGuid)
-                .catch(err => console.error("Error sending message: ", err.toString()));
-        });
-
-
-
-    });
-
-    $(document).ready(function () {
+  @*   $(document).ready(function () {
         const connection = new signalR.HubConnectionBuilder()
             .withUrl("/bidhub")
             .build();
@@ -179,7 +119,72 @@
             }
         }
 
+    }); *@
+
+
+
+
+
+<div class="container-fluid chat-container">
+    <div class="chat-box" id="chatBox">
+    </div>
+    <div class="chat-input p-3">
+        <input id="messageInput" type="text" class="form-control" placeholder="Type message..." />
+        <button id="sendButton" class="btn btn-primary ms-2">Send</button>
+    </div>
+</div>
+
+
+<script>
+    ///dodać tutaj start bid
+    let highestBid = 0;
+    const itemGuid = '@Model.Guid';
+    const userEmail = '@userEmail';
+    const userId = '@userId';
+    var auctionItemId = '@Model.Id';
+
+    $(document).ready(function () {
+        const connection = new signalR.HubConnectionBuilder()
+            .withUrl("/chathub")
+            .build();
+
+        console.log(itemGuid);
+
+        connection.start()
+            .then(() => {
+                connection.invoke("JoinGroup", itemGuid)
+                    .catch(err => console.error("Error joining group: ", err.toString()));
+            })
+            .catch(err => console.error("Error establishing connection: ", err.toString()));
+
+        connection.on("ReceiveMessage", function (message, userEmail, date) {
+            var messageElement = document.createElement("div");
+            messageElement.className = "message";
+            messageElement.textContent = `${date}: ${userEmail}: ${message}`;
+            document.getElementById("chatBox").appendChild(messageElement);
+        });
+
+        $('#sendButton').click(function () {
+            const message = $('#messageInput').val();
+            if (message) {
+
+                connection.invoke("SendMessageToGroup", itemGuid, message, userEmail, auctionItemId, userId)
+                    .catch(err => console.error("Error sending message: ", err.toString()));
+                $('#messageInput').val(''); // Wyczyść pole tekstowe po wysłaniu wiadomości
+            }
+        });
+
+        $('#quitButton').click(function () {
+
+            connection.invoke("LeaveGroup", itemGuid)
+                .catch(err => console.error("Error sending message: ", err.toString()));
+        });
+
+
+
     });
+
+
 </script>
 
 
