--- a/AuctionAce.Api/Views/AuctionItem/Index.cshtml
+++ b/AuctionAce.Api/Views/AuctionItem/Index.cshtml
@@ -60,7 +60,7 @@
 </div>
 <div class="row">
     <div class="col-md-5">
-        <input type="number" id="acutalPrice" disabled value="2100" />
+        <input type="number" id="actualPrice" disabled/>
     </div>
     <div class="col-md-2">
         <button id="bidButton" class="btn btn-primary ms-2">Bid</button>
@@ -68,29 +68,124 @@
     <div class="col-md-5">
         <input type="number" id="newBid" />
     </div>
+    <div class="col-md-12 mt-3">
+        <span id="countdownTimer"></span>
+    </div>
 </div>
-  @*   $(document).ready(function () {
+
+<div class="container-fluid chat-container">
+    <div class="chat-box" id="chatBox">
+    </div>
+    <div class="chat-input p-3">
+        <input id="messageInput" type="text" class="form-control" placeholder="Type message..." />
+        <button id="sendButton" class="btn btn-primary ms-2">Send</button>
+    </div>
+</div>
+
+
+<script>
+    let highestBid = 0;
+    let remainingTime = { days: 0, hours: 0, minutes: 0, seconds: 0 };
+    const itemGuid = '@Model.Guid';
+    const userEmail = '@userEmail';
+    const userId = '@userId';
+    var auctionItemId = '@Model.Id';
+
+    $(document).ready(function () {
         const connection = new signalR.HubConnectionBuilder()
-            .withUrl("/bidhub")
+            .withUrl("/hub")
             .build();
+
+        console.log(itemGuid);
 
         connection.start()
             .then(() => {
-                connection.invoke("JoinGroup", itemGuid)
+                connection.invoke("JoinGroup", itemGuid, auctionItemId)
                     .catch(err => console.error("Error joining group: ", err.toString()));
+
+                setInterval(updateCountdownTimer, 1000);
             })
             .catch(err => console.error("Error establishing connection: ", err.toString()));
+
+        connection.on("ReceiveMessage", function (message, userEmail, date) {
+            var messageElement = document.createElement("div");
+            messageElement.className = "message";
+            messageElement.textContent = `${date}: ${userEmail}: ${message}`;
+            document.getElementById("chatBox").appendChild(messageElement);
+        });
+
+        connection.on("ReceiveRemainingAuctionTime", function (remainingTime) {
+        });
+
+        connection.on("ReceiveHistoryMessages", function (formattedChatHistories) {
+
+            var chatBox = document.getElementById("chatBox")
+            chatBox.innerHTML = '';
+
+            formattedChatHistories.forEach(function (chatMessage) {
+                var messageElement = document.createElement("div");
+                var formattedData = chatMessage.dateFormatted;
+                var userEmail = chatMessage.userEmail;
+                var message = chatMessage.message;
+                messageElement.textContent = `${formattedData}: ${userEmail}: ${message}`;
+                document.getElementById("chatBox").appendChild(messageElement);
+            });
+        });
+
+        connection.on("ReceiveHistoryBids", function (formattedBidHistories, highestBid) {
+            console.log(formattedBidHistories);
+            var leaderboardBody = document.getElementById("leaderboardBody");
+            leaderboardBody.innerHTML = '';
+
+            formattedBidHistories.forEach(function (bid, index) {
+                console.log(bid);
+                var row = document.createElement("tr");
+                var indexCell = document.createElement("td");
+                indexCell.textContent = index + 1;
+
+                var userCell = document.createElement("td");
+                userCell.textContent = bid.userEmail;
+
+                var priceCell = document.createElement("td");
+                priceCell.textContent = bid.price;
+
+                row.appendChild(indexCell);
+                row.appendChild(userCell);
+                row.appendChild(priceCell);
+
+                leaderboardBody.appendChild(row);
+            });
+
+            highestBid = highestBid;
+            $('#actualPrice').val(highestBid);
+        });
 
         connection.on("ReceiveBid", function (bid, userEmail, date) {
             updateLeaderboard(bid, userEmail);
         });
 
+        $('#sendButton').click(function () {
+            const message = $('#messageInput').val();
+            if (message) {
+
+                connection.invoke("SendMessageToGroup", itemGuid, message, userEmail, auctionItemId, userId)
+                    .catch(err => console.error("Error sending message: ", err.toString()));
+                $('#messageInput').val(''); // Wyczyść pole tekstowe po wysłaniu wiadomości
+            }
+        });
+
         $('#bidButton').click(function () {
             const offer = $('#newBid')[0].valueAsNumber;
             if (offer) {
-                connection.invoke("SendBidToGroup", itemGuid, offer, userEmail)
+                connection.invoke("SendBidToGroup", itemGuid, offer, userEmail, userId, auctionItemId)
                     .catch(err => console.error("Error sending bid: ", err.toString()));
             }
+        });
+
+        $('#quitButton').click(function () {
+
+            connection.invoke("LeaveGroup", itemGuid)
+                .catch(err => console.error("Error sending message: ", err.toString()));
         });
 
         function updateLeaderboard(bid, userEmail) {
@@ -109,97 +204,23 @@
                 newRow.insertCell(1).textContent = userEmail;
                 newRow.insertCell(2).textContent = bid;
 
-                // Zaktualizuj najwyższą ofertę
                 highestBid = bid;
 
                 // Zaktualizuj numery pozycji
                 for (let i = 0; i < tableBody.rows.length; i++) {
                     tableBody.rows[i].cells[0].textContent = i + 1;
                 }
+                $('#actualPrice').val(highestBid);
+            } else if (bid <= highestBid) {
+                // Dodaj komunikat błędu, gdy oferta jest równa lub niższa od najwyższej
+                Swal.fire({
+                    icon: 'error',
+                    title: `The offer must be greater than ${highestBid}`,
+                });
             }
         }
 
-    }); *@
-
-
-
-
-
-<div class="container-fluid chat-container">
-    <div class="chat-box" id="chatBox">
-    </div>
-    <div class="chat-input p-3">
-        <input id="messageInput" type="text" class="form-control" placeholder="Type message..." />
-        <button id="sendButton" class="btn btn-primary ms-2">Send</button>
-    </div>
-</div>
-
-
-<script>
-    ///dodać tutaj start bid
-    let highestBid = 0;
-    const itemGuid = '@Model.Guid';
-    const userEmail = '@userEmail';
-    const userId = '@userId';
-    var auctionItemId = '@Model.Id';
-
-    $(document).ready(function () {
-        const connection = new signalR.HubConnectionBuilder()
-            .withUrl("/chathub")
-            .build();
-
-        console.log(itemGuid);
-
-        connection.start()
-            .then(() => {
-                connection.invoke("JoinGroup", itemGuid,auctionItemId)
-                    .catch(err => console.error("Error joining group: ", err.toString()));
-            })
-            .catch(err => console.error("Error establishing connection: ", err.toString()));
-
-        connection.on("ReceiveMessage", function (message, userEmail, date) {
-            var messageElement = document.createElement("div");
-            messageElement.className = "message";
-            messageElement.textContent = `${date}: ${userEmail}: ${message}`;
-            document.getElementById("chatBox").appendChild(messageElement);
-        });
-
-        connection.on("ReceiveHistoryMessages", function (formattedChatHistories) {
-
-            var chatBox = document.getElementById("chatBox")
-            chatBox.innerHTML = '';
-
-            formattedChatHistories.forEach(function (chatMessage) {
-                var messageElement = document.createElement("div");
-                var formattedData = chatMessage.dateFormatted;
-                var userEmail = chatMessage.userEmail;
-                var message = chatMessage.message;
-                messageElement.textContent = `${formattedData}: ${userEmail}: ${message}`;
-                document.getElementById("chatBox").appendChild(messageElement);
-            });
-        });
-
-        $('#sendButton').click(function () {
-            const message = $('#messageInput').val();
-            if (message) {
-
-                connection.invoke("SendMessageToGroup", itemGuid, message, userEmail, auctionItemId, userId)
-                    .catch(err => console.error("Error sending message: ", err.toString()));
-                $('#messageInput').val(''); // Wyczyść pole tekstowe po wysłaniu wiadomości
-            }
-        });
-
-        $('#quitButton').click(function () {
-
-            connection.invoke("LeaveGroup", itemGuid)
-                .catch(err => console.error("Error sending message: ", err.toString()));
-        });
-
-
-
     });
-
-
 </script>
 
 
