--- a/AuctionAce.Api/Views/Shared/_LayoutLogged.cshtml
+++ b/AuctionAce.Api/Views/Shared/_LayoutLogged.cshtml
@@ -62,6 +62,18 @@
                             </a>
                         </li>
                         <li>
+                            <a href="@Url.Action("Index","Wishlist")" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i>
+                                <span class="ms-1 d-none d-sm-inline">Wishlist</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index","BoughtItems")" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i>
+                                <span class="ms-1 d-none d-sm-inline">Bought Items</span>
+                            </a>
+                        </li>
+                        <li>
                             <a href="#" id="logoutButton" class="nav-link px-0 align-middle">
                                 <i class="fs-4 bi-people"></i>
                                 <span class="ms-1 d-none d-sm-inline">Logout</span>
