--- a/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
+++ b/AuctionAce.Api/Views/Auction/AuctionItemList.cshtml
@@ -45,7 +45,7 @@
                                 </button>
                             </td>
                             <td>
-                                <a href="@Url.Action("Index", "AuctionItem", new { itemId = i.Id,itemGuid =i.Guid})" class="btn btn-primary">Join</a>
+                                <a href="@Url.Action("Index", "AuctionItem", new { itemId = i.Id,itemGuid =i.Guid})" class="btn btn-primary @(i.IdStatus == 0 ? "disabled" : "")"@(i.IdStatus == 0 ? "tabindex='-1' aria-disabled='true'" :"")>@(i.IdStatus == 0 ? "Closed" : "Join")</a>
                             </td>
                         </tr>
 
