--- a/AuctionAce.Api/Views/AuctionItem/Index.cshtml
+++ b/AuctionAce.Api/Views/AuctionItem/Index.cshtml
@@ -38,7 +38,9 @@
 
 
     <div class="col-md-2" style="text-align:center">
-        <button id="quitButton" class="btn btn-primary ms-2">Quit</button>
+
+        <a class="btn btn-primary" id="quitButton">Quit</a>
+        <a class="btn btn-primary" id="buyNowButton">Buy Now : @Model.BuyNowPrice</a>
     </div>
     <div class="col-md-5">
         <div class="leaderboard" id="leaderBody" style="margin-top:0px;max-height: 400px; overflow-y: auto;">
@@ -58,20 +60,30 @@
     </div>
 
 </div>
-<div class="row">
-    <div class="col-md-5">
-        <input type="text" id="actualPrice" value="@Model.ActualHighestPrice" disabled />
+<div class="container mt-4">
+    <div class="row">
+        <!-- Sekcja z aktualną ceną -->
+        <div class="col-md-5 d-flex align-items-center">
+            <label for="actualPrice" class="form-label me-2">Current Price:</label>
+            <input type="text" id="actualPrice" class="form-control" value="@Model.ActualHighestPrice" disabled />
+        </div>
+
+        <!-- Sekcja z polem na nową ofertę i przyciskiem Bid -->
+        <div class="col-md-5 d-flex align-items-center">
+            <input type="number" id="newBid" class="form-control me-2" placeholder="Enter your bid" />
+            <button id="bidButton" class="btn btn-primary">Bid</button>
+        </div>
     </div>
-    <div class="col-md-2">
-        <button id="bidButton" class="btn btn-primary ms-2">Bid</button>
-    </div>
-    <div class="col-md-5">
-        <input type="number" id="newBid" />
-    </div>
-    <div class="col-md-12 mt-3">
-        <span id="countdownTimer"></span>
+
+    <!-- Sekcja z odliczaniem -->
+    <div class="row mt-2">
+        <div class="col-md-12">
+            <span id="countdownTimer" class="h5">timer</span>
+        </div>
     </div>
 </div>
+
+
 
 <div class="container-fluid chat-container">
     <div class="chat-box" id="chatBox">
@@ -184,12 +196,57 @@
                 });
             }
         });
-
+        
         $('#quitButton').click(function () {
-
-            connection.invoke("LeaveGroup", itemGuid)
-                .catch(err => console.error("Error sending message: ", err.toString()));
+            Swal.fire({
+                title: "Are you sure?",
+                text: "You can come back here before the time runs out!",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Yes, quit!"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire({
+                        title: "Success!",
+                        icon: "success"
+                    }).then(() => {
+                        connection.invoke("LeaveGroup", itemGuid)
+                            .catch(err => console.error("Error sending message: ", err.toString()));
+                        // Możesz przekierować użytkownika po zakończeniu animacji
+                        window.location.href = '@Url.Action("AuctionItemList", "Auction", new { auctionId = Model.AuctionId })';
+                    });
+                    
+                }
+            })
         });
+
+        $('#buyNowButton').click(function () {
+            
+            Swal.fire({
+                title: `Are you sure you want to buy the item for ${@Model.BuyNowPrice}`,
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Yes, buy!"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire({
+                        title: "Success!",
+                        text: "Item purchased successfully",
+                        icon: "success"
+                    }).then(() => {
+                        connection.invoke("LeaveGroup", itemGuid)
+                            .catch(err => console.error("Error sending message: ", err.toString()));
+                        window.location.href = '@Url.Action("Index", "BoughtItems", new { itemGuid = Model.Guid })';
+                    });
+
+                }
+            })
+        });
+
 
         function updateLeaderboard(bid, userEmail) {
             const tableBody = document.getElementById('leaderboardBody');
@@ -230,7 +287,6 @@
 
 
 <style>
-
     .carousel-inner img {
         width: 100%; /* Szerokość zdjęcia dopasowana do kontenera */
         height: auto; /* Automatyczna wysokość, aby zachować proporcje */
@@ -249,11 +305,11 @@
             overflow-y: auto;
         }
 
-            .table thead, .table tbody tr {
-                display: table;
-                width: 100%;
-                table-layout: fixed; /* Stała szerokość kolumn */
-            }
+        .table thead, .table tbody tr {
+            display: table;
+            width: 100%;
+            table-layout: fixed; /* Stała szerokość kolumn */
+        }
 
         .table thead {
         }
