bought item list added

--- a/AuctionAce.Api/Views/AuctionItem/Index.cshtml
+++ b/AuctionAce.Api/Views/AuctionItem/Index.cshtml
@@ -223,7 +223,6 @@
         });
 
         $('#buyNowButton').click(function () {
-            console.log(userId + @Model.Id + @Model.BuyNowPrice)
             Swal.fire({
                 title: `Are you sure you want to buy the item for ${@Model.BuyNowPrice}`,
                 icon: "warning",
@@ -239,8 +238,8 @@
                         icon: "success"
                     }).then(() => {
                         connection.invoke("LeaveGroup", itemGuid)
-                            .catch(err => console.error("Error sending message: ", err.toString()));
-                        window.location.href = '@Url.Action("Index", "BoughtItems")' + `?itemId=${@Model.Id}&buyNowPrice=${@Model.BuyNowPrice}&userId=${userId}`;
+                            .catch(err => console.error("Error leaving message: ", err.toString()));
+                        window.location.href = '@Url.Action("Index", "UserBoughtItems")' + `?itemId=${@Model.Id}&buyNowPrice=${@Model.BuyNowPrice}`;
 
                     });
 
